tests/fixtures/invalid/scalar_compound_literal_comma_missing_initializer.c
int main(void) {
    return (char){,};
}
